# nonebot-plugin-avalon

./: README.md  TUTORIAL.md  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: 报告-bug.md
nonebot_plugin_avalon/: __init__.py  _game.py  _state_machine.py  game.py  matchers.py  role.py  state_machine.py
nonebot_plugin_avalon/game/: __init__.py  game.py  round.py  state.py  state_machine.py
nonebot_plugin_avalon/game/states/: __init__.py  assassinate.py  force_end.py  game_end.py  initialize.py  next_leader.py  team_build.py  team_set_out.py  team_vote.py  wait_start.py
nonebot_plugin_avalon/matchers/: __init__.py  game.py  helper.py
